added discs in changelogs

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -311,7 +311,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Game controller key mapping for games that don’t support gamepads (NOTICE: Genshin Impact's native controller support is not working for now)</li>
 										<li>Fixed bug of mouse reset on Burst (Ultimate) in Genshin Impact</li>
 										<li>Fixed bug of mouse reset on Burst (Ultimate) in Genshin Impact</li>
@@ -357,7 +357,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Keymapping elements will resize on window size change</li>
 										<li>Special indicator will be shown on entering and leaving editor mode</li>
 										<li>All parent UIViews scale properly (web announcements inside Genshin Impact are fixed, some games as such as Genshin Impact currently require restarting for proper scale after window change)</li>
@@ -397,7 +397,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>This release contains the most common bug fixes of 0.6.0</li>
 										<li>NSInvocation Dynamic error on launch solved</li>
 										<li>Resolved problem when dock and menu bars sometimes are not hidden in Fullscreen mode</li>
@@ -428,7 +428,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>'Fix login' option is now available for everyone. Follow <a href="https://www.youtube.com/watch?v=H3CoI84s_FI&t=94s" target="_blank" class="underline">video instruction</a> to use it. Also you can find <a href="https://www.applegamingwiki.com/wiki/PlayCover" target="_blank" class="underline">text version</a> here. If you have any problems, please, click on 'Troubleshoot' button. Be aware that all this you perform at your own responsibility, I am providing help with this method only for Supporters.</li>
 										<li>App decryption was significantly improved since last release</li>
 										<li>Keymapping elements are now saved properly. No more random vanishing.</li>
@@ -469,7 +469,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>For those apps which currently crashes there is a new checkbox. Now you can export such apps for Sideloadly and then install on Mac</li>
 										<li>iOS support. With PlayCover, you can also play any game with Mouse & Keyboard support. Just enable them in Assistive Touch menu. Fullscreen is ofc disabled</li>
 										<li>System specific bug fixes</li>
@@ -500,7 +500,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>In this release you still can't decrypt some apps, but this system was massively improved</li>
 										<li>If you have decryption error, please download .ipa from AppDb</li>
 										<li>Better error handling for decryption</li>
@@ -534,7 +534,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Now you are able to use .ipa from iMazing or M1 Checker</li>
 										<li>Keymapping fix</li>
 										<li>Dynamic screen support</li>
@@ -566,7 +566,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Fixed endless loading bug on discard File Open dialog</li>
 										<li>Improved log system (real time)</li>
 										<li>Optionally Fullscreen</li>
@@ -599,7 +599,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Now you can import decrypted .ipa directly</li>
 										<li>Fixed "System Error 4"</li>
 										<li>Fixed bug with copying system files to zip</li>
@@ -631,7 +631,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>This release just to publish source code</li>
 										<li>Fixed "App cannot be opened" error</li>
 										<li>Now the app is able to open any decrypted .app file ( you can find them by downloading .ipa from AppDb, renaming .ipa to .zip and extracting it)</li>
