--- a/public/lang/cn/changelog/index.html
+++ b/public/lang/cn/changelog/index.html
@@ -311,7 +311,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>不支持游戏手柄的游戏的游戏控制器键映射（注意：Genshin Impact 的本机控制器支持目前不起作用）</li>
 										<li>修复了元神冲击中爆发（终极）时鼠标重置的错误</li>
 										<li>更流畅的鼠标移动</li>
@@ -356,7 +356,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>窗口大小改变时，按键映射元素将自动调整大小</li>
 										<li>在进入和离开编辑模式时，将显示提示文字</li>
 										<li>所有父级UIView都能正确缩放（原神内的网页公告已被修复，一些游戏，如原神目前需要重启以在窗口改变后获得正确的缩放。</li>
@@ -396,7 +396,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>该版本包含了0.6.0版本中最常见bug的修复</li>
 										<li>解决了启动时NSInvocation动态错误问题</li>
 										<li>解决了在全屏模式下，Dock和菜单栏有时不被隐藏的问题。</li>
@@ -427,7 +427,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>「登录修复」选项现在对每个人都可用，请按照 <a href="https://www.youtube.com/watch?v=H3CoI84s_FI&t=94s" target="_blank" class="underline">视频说明</a> 使用它。你也可以找到 <a href="https://www.applegamingwiki.com/wiki/PlayCover" target="_blank" class="underline">文字版</a> 这里。 如果你有任何问题，请点击「troubleshoot」按钮。请注意，勾选修复登录选项后出现的任何问题你需要自己负责，我们不承担任何责任。</li>
 										<li>自上次发布以来，应用程序的解密得到了明显的改善</li>
 										<li>按键映射现在可以正确保存，不再有随机消失的情况。</li>
@@ -468,7 +468,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>对于目前会崩溃的应用程序，有一个新的复选框。现在你可以将这些应用使用侧载方式安装到Mac上。</li>
 										<li>使用侧载安装iOS应用，仍还可以使用鼠标和键盘的游玩游戏。只需在「辅助性触摸」菜单中启用它们。当然，全屏是禁用的。</li>
 										<li>系统特定错误修复</li>
@@ -499,7 +499,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>在这个版本中，你仍然无法解密一些应用程序，但解密系统得到了很大的改进。</li>
 										<li>如果你遇到解密错误，请从AppDb下载ipa。</li>
 										<li>更好地处理解密的错误</li>
@@ -533,7 +533,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>现在你可以使用iMazing或M1 Checker的.ipa了。</li>
 										<li>修复了键盘映射</li>
 										<li>动态屏幕支持</li>
@@ -565,7 +565,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>修复了打开丢弃文件对话框的无尽加载错误</li>
 										<li>改进了日志系统（实时）</li>
 										<li>可选择全屏</li>
@@ -598,7 +598,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>现在你可以直接导入已解密的.ipa文件</li>
 										<li>修正了 「系统错误4」</li>
 										<li>修正了将系统文件复制到zip压缩包中的错误</li>
@@ -630,7 +630,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>这个版本只是为了发布源代码</li>
 										<li>修正了「应用程序不能被打开」的错误</li>
 										<li>现在应用程序可以加载任何已解密的app文件（你可以通过从AppDb下载.ipa，将.ipa重命名为.zip并解压来找到它们） it)</li>
