--- a/public/lang/de/changelog/index.html
+++ b/public/lang/de/changelog/index.html
@@ -312,7 +312,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Gamecontroller-Tastenzuordnung für Spiele, die keine Gamepads unterstützen (HINWEIS: Genshin native Controller-Unterstützung funktioniert noch nicht)</li>
 										<li>Fehler beim Zurücksetzen der Maus bei Burst (Ultimate) in Genshin behoben</li>
 										<li>Flüssigere Mausbewegungen</li>
@@ -357,7 +357,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Elemente der Tastenbelegung werden bei Änderung der Fenstergröße skaliert</li>
 										<li>Beim Betreten und Verlassen des Editor-Modus wird ein spezieller Indikator angezeigt</li>
 										<li>Alle übergeordneten UIViews werden ordnungsgemäß skaliert (Webankündigungen in Genshin Impact sind behoben, einige Spiele wie Genshin Impact erfordern derzeit einen Neustart für die richtige Skalierung nach dem Fensterwechsel)</li>
@@ -397,7 +397,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Diese Version enthält die häufigsten Fehlerbehebungen von 0.6.0</li>
 										<li>Dynamischer NSInvocation-Fehler beim Start behoben</li>
 										<li>Problem behoben, wenn Dock- und Menüleisten im Vollbildmodus manchmal nicht ausgeblendet wurden</li>
@@ -428,7 +428,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Die Option "Anmeldung reparieren" ist jetzt für alle verfügbar. Folgen <a href="https://www.youtube.com/watch?v=H3CoI84s_FI&t=94s" target="_blank" class="underline">Videoanleitung</a> um es zu benutzen. Auch finden Sie <a href="https://www.applegamingwiki.com/wiki/PlayCover" target="_blank" class="underline">text version</a> Hier. Bei Problemen klicken Sie bitte auf die Schaltfläche „Fehlerbehebung“. Seien Sie sich bewusst, dass Sie all dies auf eigene Verantwortung durchführen, ich biete Hilfe bei dieser Methode nur für Unterstützer an.</li>
 										<li>Die App-Entschlüsselung wurde seit der letzten Version erheblich verbessert</li>
 										<li>Elemente der Tastenbelegung werden jetzt richtig gespeichert. Kein zufälliges Verschwinden mehr.</li>
@@ -469,7 +469,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Für Apps, die derzeit abstürzen, gibt es ein neues Kontrollkästchen. Jetzt kannst Du solche Apps für Sideloadly exportieren und dann auf dem Mac installieren</li>
 										<li>iOS-Unterstützung. Mit Sideloadly kannst Du auch jedes Spiel mit Maus- und Tastaturunterstützung spielen. Aktiviere es einfach im Assistive Touch-Menü. Vollbild ist natürlich deaktiviert</li>
 										<li>Systemspezifische Fehlerbehebungen</li>
@@ -500,7 +500,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>In dieser Version kannst Du einige Apps noch nicht entschlüsseln, aber dieses System wurde massiv verbessert</li>
 										<li>Wenn Du einen Entschlüsselungsfehler hast, lade bitte .ipa von AppDb herunter</li>
 										<li>Bessere Fehlerbehandlung bei der Entschlüsselung</li>
@@ -534,7 +534,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Jetzt kannst Du .ipa von iMazing oder M1 Checker verwenden</li>
 										<li>Korrektur der Tastenzuordnung</li>
 										<li>Dynamische Bildschirmunterstützung</li>
@@ -566,7 +566,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Fehler beim endlosen Laden beim Verwerfen des Dialogfelds „Datei öffnen“ behoben</li>
 										<li>Verbessertes Log-System (Echtzeit)</li>
 										<li>Optional Vollbild</li>
@@ -599,7 +599,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Jetzt kannst Du entschlüsselte .ipa direkt importieren</li>
 										<li>"Systemfehler 4" behoben</li>
 										<li>Fehler beim Kopieren von Systemdateien nach Zip behoben</li>
@@ -631,7 +631,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Diese Version dient nur der Veröffentlichung des Quellcodes</li>
 										<li>Fehler "App kann nicht geöffnet werden" behoben</li>
 										<li>Jetzt kann die App jede entschlüsselte .app-Datei öffnen (Du kannst sie finden, indem Du .ipa von AppDb herunterlädst, .ipa in .zip umbenennen und extrahieren)</li>
