--- a/public/lang/es/changelog/index.html
+++ b/public/lang/es/changelog/index.html
@@ -311,7 +311,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Mapeo de mando en juegos, sin soporte para gamepads (Aviso: soporte de mando native en Genshin no funciona por el momento)</li>
 										<li>Solucionado: reinicio del ratón durante la habilidad definitiva en Genshin.</li>
 										<li>Movimiento del ratón ha sido suavizado.</li>
@@ -356,7 +356,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Elementos mapeados se re escalaran cuando el tamaño de la ventana cambie </li>
 										<li>Un indicador aparecerá cuando entres o salgas del modo de edición</li>
 										<li>Todos los UIViews escalan adecuadamente (Anuncios web dentro de Genshin Impact han sido arreglados, juegos como Genshin Impact aún necesitan reiniciarse para un escalado de ventana adecuado)</li>
@@ -396,7 +396,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Lanzamiento 0.6.0: Se han arreglado la mayoría de los errores mas comunes para esta versión </li>
 										<li>Solucionado: NSInvocation Dynamic error al momento de iniciar la aplicación</li>
 										<li>Solucionado: El dock y barras de menú so se ocultaban en modo pantalla completa. </li>
@@ -427,7 +427,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Opción ‘Fix login’ esta disponible para todos los usuarios. Sigan las instrucciones del video para usarla, también encontraran una versión en texto aquí. Si tienen algún problema, por favor haga click en botón ‘Troubleshoot’. Ten en cuenta que todo esto es bajo tu propia responsabilidad, solo estoy proporcionando ayuda a los Supporters.</li>
 										<li>Mejorado: Desencriptación de aplicaciones ha mejorado significativamente desde la ultima versión.</li>
 										<li>Los elementos de mapeo ahora son guardados propiamente. No mas desaparición al azar.</li>
@@ -468,7 +468,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Para aquellas aplicaciones que se cierran inesperadamente hay una nueva opción. Ahora puedes exportar aquellas aplicaciones para un Sideloadly y luego instalarlas en Mac</li>
 										<li>Soporte para iOS. Ahora con Sideloadly, puedes juegar cualquier juego con Ratón y teclado. Solo activa la opción en el menú de assistiveTouch, el modo pantalla completa se deshabilita.</li>
 										<li>Solucionados errores específicos de sistema</li>
@@ -499,7 +499,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>En esta versión aún no es posible desencriptar algunas aplicaciones, pero, el sistema ha mejorado muy significativamente.</li>
 										<li>Si tienes un error en la desencriptación, por favor descarga el .ipa de AppDb</li>
 										<li>Mejorado el manejo de errores durante la desencriptación</li>
@@ -533,7 +533,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Ahora puedes utilizar .ipa de iMazing o M1 Checker</li>
 										<li>Solucionado: Mapeo de teclado</li>
 										<li>Soporte de pantalla dinámica.</li>
@@ -565,7 +565,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Solucionado: error de carga en el dialogo de descartar archivo abierto.</li>
 										<li>Mejorado el sistema de registro (en tiempo real)</li>
 										<li>Pantalla completa opcional.</li>
@@ -598,7 +598,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Ahora puedes importar archivos .ipa desencriptados directamente</li>
 										<li>Solucionado: “System Error 4”</li>
 										<li>Solucionado error al copiar archivos de sistema a zip</li>
@@ -630,7 +630,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Esta versión es solo para publicar el código fuente.</li>
 										<li>Solucionado error “Aplicación no puede ser abierta”</li>
 										<li>Ahora la aplicación puede abrir cualquier app desencriptada  (Puedes encontrarlas descargando .ipa de AppDb, renombrando .ipa a zip y extrayéndola)</li>
