--- a/public/lang/id/changelog/index.html
+++ b/public/lang/id/changelog/index.html
@@ -311,7 +311,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Mapping controller game untuk beberapa game yang tidak mendukung penggunaan controller (saat ini dukungan native controller belum tersedia)</li>
 										<li>Bug mouse yang tidak responsif setelah Burst di Genshin Impact sudah diperbaiki.</li>
 										<li>Pergerakkan mouse yang lebih halus.</li>
@@ -356,7 +356,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Keymapping akan otomatis mengikuti ukuran screen.</li>
 										<li>Akan ada indikator khusus a pada layar saat masuk mode editor.</li>
 										<li>Semua parent UIViews sudah di scale dengan benar (papan pengumuman pada Genshin Impact sudah diperbaiki, beberapa game seperti Genshin Impact saat ini perlu di restart saat mengganti ukuran screen aplikasi)</li>
@@ -396,7 +396,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Versi rilis ini berisi perbaikan bug umum dari versi 0.6.0</li>
 										<li>NSInvocation Dynamic error sudah diperbaiki.</li>
 										<li>Bug menu bar dan dock yang muncul dalam mode Fullscreen sudah diperbaiki.</li>
@@ -427,7 +427,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>"Fix Login" sekarang sudah tersedia untuk pengguna umum, ikuti instruksi video untuk panduan penggunaan. Panduan secara tulis dapat ditemukan disini. Jika bermasalah, klik tombol "Troubleshoot". Kami tidak bertanggung jawab atas apapun yang terjadi, kami menyediakan bantuan hanya untuk para donatur.</li>
 										<li>App decryption jauh lebih baik dari versi sebelumnya.</li>
 										<li>Elemen keymapping akan disimpan dengan baik. Tidak lagi menghilang dengan sendirinya.</li>
@@ -468,7 +468,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Ada checkbox baru untuk app yang sekarang nge-crash. Sekarang app bisa di export tersebut untuk Sideloadly lalu di install di Mac</li>
 										<li>Support untuk iOS. Dengan Sideloadly, game apapun bisa dimainkan dengan Mouse & Keyboard. Cukup diaktifkan di menu Assistive Touches. Fullscreen tentunya disabled</li>
 										<li>Perbaikan bug dalam sistem</li>
@@ -499,7 +499,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Di versi rilis ini beberapa app masih belum bisa didecrypt, tapi sistem bertambah baik</li>
 										<li>Jika mendapatkan error decryption, download .ipa dari AppDb</li>
 										<li>Error handling lebih baik untuk decryption</li>
@@ -533,7 +533,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Sekarang .ipa dari iMazing atau M1 Checker bisa digunakan</li>
 										<li>Perbaikan Keymapping</li>
 										<li>Dukungan dynamic screen</li>
@@ -565,7 +565,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Perbaikan endless loading saat menutup dialog File Open</li>
 										<li>Perbaikan log system (real time)</li>
 										<li>Opsi Fullscreen</li>
@@ -598,7 +598,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Sekarang file .ipa yang sudah decrypted bisa diimport</li>
 										<li>Perbaikan “System Error 4”</li>
 										<li>Perbaikan bug saat copy system files ke zip</li>
@@ -630,7 +630,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Perbaikan bug “Minimum required OS version is 13.0” Rilis ini hanya untuk menerbitkan source code</li>
 										<li>Perbaikan error “App cannot be opened”</li>
 										<li>Sekarang app bisa membuka file .ipa apapun yang sudah decrypted (dapat dilakukan dengan download file .ipa dari AppDb, rename file .ipa ke .zip lalu di extract)</li>
