--- a/public/lang/ru/changelog/index.html
+++ b/public/lang/ru/changelog/index.html
@@ -312,7 +312,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Назначение клавиш геймпада в играх, не поддерживающих геймпад (ВНИМАНИЕ: встроенная поддержка геймпада в Genshin Impact пока не работает)</li>
 										<li>Исправлена ошибка с остановкой камеры после использования Взрыва стихий в Genshin Impact</li>
 										<li>Более ровное движение мыши</li>
@@ -357,7 +357,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Элементы назначения клавиш будут изменять размер при изменении размера окна</li>
 										<li>Специальный индикатор будет показываться при входе и выходе из режима редактора </li>
 										<li>Родительские UIView правильно масштабируются (исправлены web-уведомления в Genshin Impact; некоторые игры (например, Genshin Impact) в настоящее время необходимо перезапустить для правильного масштабирования после изменения окна)</li>
@@ -397,7 +397,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Эта версия содержит исправление самых распространенных ошибок в 0.6.0</li>
 										<li>Исправлена ошибка динамики NSInvocation при запуске</li>
 										<li>Исправлена проблема, при которой панель Dock и строка меню не скрыты в полноэкранном режиме</li>
@@ -428,7 +428,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Опция «Исправить авторизацию» (Fix login) теперь доступна всем. Следовать <a href="https://www.youtube.com/watch?v=H3CoI84s_FI&t=94s" target="_blank" class="underline">видео инструкции</a> использовать это. Также вы можете найти <a href="https://www.applegamingwiki.com/wiki/PlayCover" target="_blank" class="underline">текстовая версия</a> здесь. Если у вас возникли проблемы, нажмите кнопку «Устранение неполадок». Имейте в виду, что все это вы выполняете под свою ответственность, я предоставляю помощь этим методом только для Сторонников.</li>
 										<li>Расшифровка приложений значительно улучшилась по сравнению с предыдущей версией</li>
 										<li>Элементы назначения клавиш теперь правильно сохраняются, без случайных исчезновений.</li>
@@ -469,7 +469,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Для приложений, которые вылетают при запуске, добавлен новый флажок. Теперь вы можете экспортировать такие приложения для Sideloadly и затем установить на Mac.</li>
 										<li>Поддержка iOS. С помощью Sideloadly вы тоже можете играть в игры с поддержкой мыши и клавиатуры, просто включите их в меню Assistive Touches. Полноэкранный режим в таких случаях не работает.</li>
 										<li>Исправлены ошибки системы</li>
@@ -500,7 +500,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>В этой версии некоторые приложения все еще нельзя расшифровать, но система была значительно улучшена</li>
 										<li>Если возникает ошибка при расшифровке, пожалуйста, скачайте .ipa из AppDb</li>
 										<li>Улучшена обработка ошибок при расшифровке</li>
@@ -534,7 +534,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Теперь можно использовать .ipa с iMazing или M1 Checker</li>
 										<li>Исправлено назначение клавиш</li>
 										<li>Поддержка динамического экрана</li>
@@ -566,7 +566,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Исправлена ошибка бесконечной загрузки в диалоговом окне Открытие файла</li>
 										<li>Улучшенная система логов (в реальном времени)</li>
 										<li>Возможность полноэкранного запуска</li>
@@ -599,7 +599,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Теперь можно импортировать расшифрованный файл .ipa напрямую</li>
 										<li>Исправлена ошибка "System Error 4"</li>
 										<li>Исправлена ошибка при копировании системных файлов в zip</li>
@@ -631,7 +631,7 @@
 
 								<!-- release notes -->
 								<div>
-									<ul class="text-sm space-y-2">
+									<ul class="text-sm space-y-2 list-outside list-disc pl-4">
 										<li>Эта версия для того, чтобы выложить исходный код</li>
 										<li>Исправлена ошибка «Приложение не может быть открыто»</li>
 										<li>Теперь приложение может открыть любой расшифрованный файл .app (его можно найти, если скачать .ipa с AppDb, переименовать .ipa в .zip и распаковать его)</li>
