modified faq q's outlines

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -68,26 +68,26 @@
 								<!-- text -->
 								<ul class="space-y-4 flex flex-col items-center">
 									<li>
-										<a href="/lang/cn" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> 简体中文 </a>
+										<a href="/lang/cn" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> 简体中文 </a>
 									</li>
 									<li>
-										<a href="/lang/ru" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> Русский </a>
+										<a href="/lang/ru" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> Русский </a>
 									</li>
 									<li class="hidden">
-										<a href="/lang/jp" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> 日本語 </a>
+										<a href="/lang/jp" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> 日本語 </a>
 									</li>
 									<li>
-										<a href="/lang/de" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> Deutsch </a>
+										<a href="/lang/de" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> Deutsch </a>
 									</li>
 									<li>
-										<a href="/lang/id" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200 flex flex-col items-center"><span>Bahasa</span>   Indonesia </a>
+										<a href="/lang/id" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200 flex flex-col items-center"><span>Bahasa</span>   Indonesia </a>
 									</li>
 
 									<li class="hidden">
-										<a href="/lang/kr" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> 한국어 </a>
+										<a href="/lang/kr" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> 한국어 </a>
 									</li>
 									<li>
-										<a href="/lang/es" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> Español </a>
+										<a href="/lang/es" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> Español </a>
 									</li>
 									
 								</ul>
@@ -200,8 +200,8 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-text-purple transition duration-200">Changelog</span>
-				<span class="lg:hidden flex flex-col items-center text-4xl font-semibold text-gray-700 dark:text-text-purple transition duration-200 space-y-3">
+				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Changelog</span>
+				<span class="lg:hidden flex flex-col items-center text-4xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3">
 					<p>Changelog</p>
 				</span>
 			</header>
@@ -212,7 +212,7 @@
 					<!-- spinning circle and dotted line -->
 					<div class="flex flex-col items-center">
 						<!-- spinning circle -->
-						<div class="h-4 w-4 rounded-full border-2 border-solid border-r-text-purple border-t-text-purple dark:border-r-text-purple dark:border-t-text-purple border-gray-300 dark:border-gray-600 rotate-45"></div>
+						<div class="h-4 w-4 rounded-full border-2 border-solid border-r-menu-pink border-t-menu-pink dark:border-r-menu-pink dark:border-t-menu-pink border-gray-300 dark:border-gray-600 rotate-45"></div>
 						<!-- dotted line -->
 						<div class="dotted-line border-l-2 border-dotted border-gray-300 dark:border-gray-600 h-[4.5rem]"></div>
 					</div>
@@ -220,7 +220,7 @@
 					<!-- latest release -->
 					<div class="flex flex-col items-center">
 						<!-- yellow circle -->
-						<div class="h-3 w-3 rounded-full border-2 border-solid border-text-purple "></div>
+						<div class="h-3 w-3 rounded-full border-2 border-solid border-menu-pink "></div>
 					</div>
 
 					<!-- COPY for past releases -->
@@ -305,7 +305,7 @@
 							<div class="flex flex-col">
 								<!-- version and date -->
 								<div class="flex space-x-5 items-center pb-2">
-									<h2 class="text-text-purple font-medium text-xl">0.7.3</h2>
+									<h2 class="text-menu-pink font-medium text-xl">0.7.3</h2>
 									<p class="text-sm">(10-09-2021)</p>
 								</div>
 
@@ -737,8 +737,8 @@
 				<section class="flex flex-col-reverse md:flex-row md:justify-between md:items-center space-y-4 md:space-y-0">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="/legal-notice/" class="pr-4 hover:text-text-purple underline text-left">Legal Notice</a>
-						<a href="mailto:copyright@playcover.me" class="underline hover:text-text-purple ">Copyright Claims</a>
+						<a href="/legal-notice/" class="pr-4 hover:text-menu-pink underline text-left">Legal Notice</a>
+						<a href="mailto:copyright@playcover.me" class="underline hover:text-menu-pink ">Copyright Claims</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. All rights reserved.</p>
