--- a/public/lang/de/legal-notice/index.html
+++ b/public/lang/de/legal-notice/index.html
@@ -69,26 +69,26 @@
 								<!-- text -->
 								<ul class="space-y-4 flex flex-col items-center">
 									<li>
-										<a href="/lang/cn" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> 简体中文 </a>
+										<a href="/lang/cn" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> 简体中文 </a>
 									</li>
 									<li>
-										<a href="/lang/ru" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> Русский </a>
+										<a href="/lang/ru" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> Русский </a>
 									</li>
 									<li class="hidden">
-										<a href="/lang/jp" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> 日本語 </a>
+										<a href="/lang/jp" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> 日本語 </a>
 									</li>
 									<li>
-										<a href="/index.html" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> English </a>
+										<a href="/index.html" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> English </a>
 									</li>
 									<li>
-										<a href="/lang/id" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200 flex flex-col items-center"><span>Bahasa</span>   Indonesia </a>
+										<a href="/lang/id" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200 flex flex-col items-center"><span>Bahasa</span>   Indonesia </a>
 									</li>
 
 									<li class="hidden">
-										<a href="/lang/kr" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> 한국어 </a>
+										<a href="/lang/kr" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> 한국어 </a>
 									</li>
 									<li>
-										<a href="/lang/es" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> Español </a>
+										<a href="/lang/es" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> Español </a>
 									</li>
 									
 								</ul>
@@ -199,8 +199,8 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-text-purple transition duration-200">Rechtlicher Hinweis</span>
-				<span class="lg:hidden flex flex-col text-4xl font-semibold text-gray-700 dark:text-text-purple transition duration-200 space-y-3">
+				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-menu-pink transition duration-200">Rechtlicher Hinweis</span>
+				<span class="lg:hidden flex flex-col text-4xl font-semibold text-gray-700 dark:text-menu-pink transition duration-200 space-y-3">
 					<p>Rechtlicher</p>
 					<p>Hinweis</p>
 				</span>
@@ -319,8 +319,8 @@
 				<section class="flex flex-col-reverse md:flex-row md:justify-between md:items-center space-y-4 md:space-y-0">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="/lang/de/legal-notice/" class="pr-4 hover:text-text-purple underline text-left">Rechtlicher Hinweis</a>
-						<a href="mailto:copyright@playcover.me" class="underline hover:text-text-purple ">Urheberrechtsansprüche</a>
+						<a href="/lang/de/legal-notice/" class="pr-4 hover:text-menu-pink underline text-left">Rechtlicher Hinweis</a>
+						<a href="mailto:copyright@playcover.me" class="underline hover:text-menu-pink ">Urheberrechtsansprüche</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. Alle Rechte vorbehalten.</p>
