--- a/public/lang/ru/index.html
+++ b/public/lang/ru/index.html
@@ -67,26 +67,26 @@
 								<!-- text -->
 								<ul class="space-y-4 flex flex-col items-center">
 									<li>
-										<a href="/lang/cn" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> 简体中文 </a>
+										<a href="/lang/cn" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> 简体中文 </a>
 									</li>
 									<li>
-										<a href="/index.html" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> English </a>
+										<a href="/index.html" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> English </a>
 									</li>
 									<li class="hidden">
-										<a href="/lang/jp" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> 日本語 </a>
+										<a href="/lang/jp" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> 日本語 </a>
 									</li>
 									<li>
-										<a href="/lang/de" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> Deutsch </a>
+										<a href="/lang/de" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> Deutsch </a>
 									</li>
 									<li>
-										<a href="/lang/id" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200 flex flex-col items-center"><span>Bahasa</span>   Indonesia </a>
+										<a href="/lang/id" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200 flex flex-col items-center"><span>Bahasa</span>   Indonesia </a>
 									</li>
 
 									<li class="hidden">
-										<a href="/lang/kr" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> 한국어 </a>
+										<a href="/lang/kr" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> 한국어 </a>
 									</li>
 									<li>
-										<a href="/lang/es" class="text-gray-700 hover:text-text-purple dark:text-gray-300 dark:hover:text-text-purple transition-colors duration-200"> Español </a>
+										<a href="/lang/es" class="text-gray-700 hover:text-menu-pink dark:text-gray-300 dark:hover:text-menu-pink transition-colors duration-200"> Español </a>
 									</li>
 									
 								</ul>
@@ -204,7 +204,7 @@
 					<!-- intro text -->
 					<div id="intro-text" class="max-w-full flex flex-col items-center justify-center dark:text-gray-300">
 						<!-- logo -->
-						<h1 class="font-extrabold text-[48px] md:text-[5rem] bg-gradient-to-b from-logo-pink to-text-purple text-transparent bg-clip-text">PlayCover</h1>
+						<h1 class="font-extrabold text-[48px] md:text-[5rem] bg-gradient-to-b from-logo-pink to-menu-pink text-transparent bg-clip-text">PlayCover</h1>
 
 						<!-- hero text -->
 						<p class="md:pl-1 max-w-xs md:max-w-7xl pt-6 md:pt-4 text-center text-lg md:text-2xl">Запускайте iOS приложения и игры. В полноэкраном режиме. Управляйте мышкой, клавиатурой и геймпадом.</p>
@@ -331,8 +331,8 @@
 				<section class="flex flex-col-reverse md:flex-row md:justify-between md:items-center space-y-4 md:space-y-0">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="/lang/ru/legal-notice/" class="pr-4 hover:text-text-purple underline text-left">Правовая информация</a>
-						<a href="mailto:copyright@playcover.me" class="underline hover:text-text-purple ">Жалобы на нарушение авторских прав</a>
+						<a href="/lang/ru/legal-notice/" class="pr-4 hover:text-menu-pink underline text-left">Правовая информация</a>
+						<a href="mailto:copyright@playcover.me" class="underline hover:text-menu-pink ">Жалобы на нарушение авторских прав</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. Все права защищены.</p>
