fixed playcover home title

--- a/public/lang/es/index.html
+++ b/public/lang/es/index.html
@@ -204,7 +204,7 @@
 					<!-- intro text -->
 					<div id="intro-text" class="max-w-full flex flex-col items-center justify-center dark:text-gray-300">
 						<!-- logo -->
-						<h1 class="font-extrabold text-[48px] md:text-[5rem] bg-gradient-to-b from-logo-pink to-menu-pink text-transparent bg-clip-text">PlayCover</h1>
+						<h1 class="font-extrabold text-[48px] md:text-[5rem] bg-gradient-to-b from-logo-pink to-text-purple text-transparent bg-clip-text">PlayCover</h1>
 
 						<!-- hero text -->
 						<p class="md:pl-1 max-w-xs md:max-w-7xl pt-6 md:pt-4 text-center text-lg md:text-2xl">le permite ejecutar aplicaciones de iOS en su Mac en pantalla completa con mouse, teclado y controlador.</p>
